--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -17,6 +17,7 @@
         margin: auto;
         background: #fff;
         padding: 20px;
+        margin-left: 5px;
       }
       .header-img {
         width: 100%; /* Faz a imagem ocupar toda a largura do container */
@@ -58,7 +59,7 @@
       />
       <h1>Inscrição confirmada</h1>
       <h2>Olá, {{ nome_produtor }}!</h2>
-      <p style="margin-bottom: 90px">
+      <p>
         É com imenso prazer que confirmamos sua participação no PRÊMIO CNA DE
         INOVAÇÃO 2024 - Alysson Paolinelli. Este concurso, organizado pela
         Confederação da Agricultura e Pecuária do Brasil (CNA) em conjunto com o
