--- a/templates/listar_inscricoes.html
+++ b/templates/listar_inscricoes.html
@@ -10,6 +10,24 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+      window.onload = function () {
+        var modal = document.getElementById("modalSenha");
+        modal.style.display = "block";
+      };
+
+      function verificarSenha() {
+        var senhaCorreta = "Btc$21!Cot";
+        var senhaUsuario = document.getElementById("inputSenha").value;
+
+        if (senhaUsuario === senhaCorreta) {
+          document.getElementById("conteudoProtegido").style.filter = "none";
+          document.getElementById("modalSenha").style.display = "none";
+        } else {
+          alert("Senha incorreta!");
+        }
+      }
+    </script>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -20,6 +38,7 @@
       h1 {
         color: #fff;
         margin-top: 24px;
+        font-size: 30px;
       }
       table {
         width: 100%;
@@ -28,15 +47,16 @@
       th,
       td {
         padding: 10px;
-        border: 1px solid #308176;
+        border: 1px solid #005146;
       }
       thead {
-        background-color: #005146;
+        background-image: radial-gradient(circle at left, #005146, #0f4d11);
         color: #fff;
         text-align: left;
+        border: 1px solid #fff;
       }
       tbody tr:hover {
-        background-color: #f0f0f0;
+        background-image: radial-gradient(circle at left, #0051462d, #0051460f);
       }
       a {
         color: #005146;
@@ -53,14 +73,14 @@
       .download-btn {
         display: inline-block;
         padding: 10px 20px;
-        background-image: linear-gradient(to right, #bea745, #9c8f35);
-        color: #fff;
+        background-image: linear-gradient(to bottom, #fff, #fff);
+        color: #005146;
         text-decoration: none;
         border-radius: 5px;
         font-weight: bold;
         border: none;
         cursor: pointer;
-        box-shadow: 2px 2px 0px #fff; /* Sombra branca sólida */
+        box-shadow: 2px 2px 0px #005146; /* Sombra branca sólida */
       }
       .download-btn:hover {
         background-color: #a8963e;
@@ -69,37 +89,132 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        background-color: #005146;
+        background-image: radial-gradient(circle at left, #005146, #0f4d11);
         padding-left: 15px;
         padding-right: 15px;
         border: solid 1px #308176;
         border-radius: 10px 10px 0 0;
       }
-
+      footer {
+        text-align: left; /* Alinha o texto à esquerda */
+        font-size: 16px; /* Define o tamanho da fonte */
+        color: #fff; /* Define a cor do texto */
+        background-image: radial-gradient(circle at left, #005146, #0f4d11);
+        padding-left: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-radius: 0 0 10px 10px;
+        border: solid 1px #005146;
+      }
       .logo-title-container {
         /* Estilos para o novo contêiner */
         display: flex;
         align-items: center;
       }
+      i {
+        margin-right: 3px;
+      }
+
+      .modal {
+        display: none; /* Inicialmente escondido */
+        position: fixed; /* Fica por cima de tudo */
+        z-index: 1000; /* Garante que fique no topo */
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto; /* Permite rolagem se o conteúdo for muito grande */
+        background-color: rgba(
+          0,
+          0,
+          0,
+          0.4
+        ); /* Fundo escuro semi-transparente */
+      }
+
+      .modal-content {
+        background-color: #fefefe;
+        margin: 10% auto; /* Centraliza o modal na página */
+        padding: 20px;
+        border: 1px solid #888;
+        width: 30%; /* Ajuste a largura conforme necessário */
+        border-radius: 10px; /* Bordas arredondadas */
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+          0 6px 20px 0 rgba(0, 0, 0, 0.19); /* Sombra para destacar o modal */
+      }
+
+      input[type="password"] {
+        width: 70%;
+        padding: 10px;
+        margin-top: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+      }
+
+      button {
+        padding: 10px 20px;
+        background-image: radial-gradient(circle at left, #005146, #0f4d11);
+        color: white; /* Texto branco */
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        width: 25%;
+      }
+      p {
+        margin-bottom: 0;
+      }
+      button:hover {
+        background-image: radial-gradient(circle at center, #005146, #0f4d11);
+      }
+
+      .fa-lock {
+        margin-top: 20px; /* Espaço acima do ícone */
+        color: #005146; /* Cor do ícone */
+        margin-bottom: 20px; /* Espaço abaixo do ícone */
+      }
+      #conteudoProtegido {
+        filter: blur(10px);
+      }
     </style>
   </head>
   <body>
+    <div id="modalSenha" class="modal">
+      <div class="modal-content">
+        <!-- Ícone de cadeado -->
+        <div
+          class="header-secret"
+          style="display: flex; align-items: center; justify-content: left"
+        >
+          <i
+            class="fas fa-lock fa-3x"
+            style="margin-right: 20px; color: #005146"
+          ></i>
+          <h2 style="margin-right: 0">
+            Por favor, <br style="font-weight: normal" />insira a senha para
+            acessar esta página
+          </h2>
+        </div>
+
+        <input type="password" id="inputSenha" placeholder="Digite a senha" />
+        <button onclick="verificarSenha()">Entrar</button>
+      </div>
+    </div>
     <div class="header-container">
       <div class="logo-title-container">
         <img
           src="static/negativo.png"
           alt="Logo"
-          style="height: 35px; margin-right: 12px"
+          style="height: 30px; margin-right: 10px"
         />
         <h1>Inscrições</h1>
       </div>
       <div>
         <a href="/download_excel" class="download-btn"
-          ><i class="fas fa-file-excel"></i> Baixar Inscrições (Excel)</a
+          ><i class="fas fa-file-download"></i> BAIXAR XLSX</a
         >
       </div>
     </div>
-    <table>
+    <table id="conteudoProtegido">
       <thead>
         <tr>
           <th>Responsável</th>
@@ -107,7 +222,7 @@
           <th>Área</th>
           <th>Descrição</th>
           <th>Anexos</th>
-          <th>Ficha</th>
+          <th>Inscrição</th>
         </tr>
       </thead>
       <tbody>
@@ -125,12 +240,13 @@
           <td>
             <a
               href="{{ url_for('ficha_inscricao', inscricao_id=inscricao.id) }}"
-              >Ver Ficha</a
+              >Abrir Inscrição</a
             >
           </td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
+    <footer>Instituto CNA</footer>
   </body>
 </html>
