--- a/static/estilo.css
+++ b/static/estilo.css
@@ -61,7 +61,7 @@ form {
     min-width: 200px;
     display: flex;
     flex-direction: column;
-    margin-left: 40px;
+    margin-left: 45px;
     margin-right: 30px;
 }
 .form-group2 {
@@ -69,7 +69,7 @@ form {
     min-width: 200px;
     display: flex;
     flex-direction: column;
-    margin-left: 40px;
+    margin-left: 45px;
 }
 
 .form-group3 {
@@ -92,7 +92,6 @@ form {
 label {
     margin-top: 0px;
     display: block;
-    padding-bottom: 2px;
     padding-top: 10px;
     font-weight: 400;
     font-size: 18px;
@@ -112,7 +111,7 @@ textarea {
 
 }
 .form-group input[type="submit"] {
-    background-image: linear-gradient(to right, #005146, #0e5d52);
+    background-image: radial-gradient(circle at left, #005146, #0b8575);
     color: white;
     padding: 12px 24px;
     border: none;
@@ -124,10 +123,12 @@ textarea {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
     margin-bottom: 30px;
+    transition: transform 0.5s; /* Torna a transição mais lenta para 0.5 segundos */
+
 }
 
 .form-group input[type="submit"]:hover {
-    background-image: linear-gradient(to left, #005146, #005146);
+    background-image: radial-gradient(circle at left, #005146, #005146e2);
     transform: scale(1.05);
 }
 
@@ -216,6 +217,7 @@ select#tipo_desafio {
   
 .input-icon {
     position: relative;
+    max-width: 250px;
 }
   
 .input-icon i {
@@ -232,6 +234,38 @@ select#tipo_desafio {
 }
 
 
+.file-input {
+  opacity: 0;
+  width: 1px;
+  height: 1px;
+  position: absolute;
+}
+
+.custom-button {
+  /* Estilize seu botão customizado aqui */
+  padding: 15.5px;
+  background-image: radial-gradient(circle at left, #005146, #0b8575);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  display: inline-flex; /* Permite que os elementos dentro do botão se alinhem corretamente */
+  align-items: center; /* Centraliza verticalmente o ícone e o texto */
+  font-weight: bold; /* Aplica negrito ao texto */
+  margin-top: 5px;
+  margin-bottom: 1rem;
+  transition: transform 0.5s; /* Torna a transição mais lenta para 0.5 segundos */
+}
+.custom-button:hover {
+    background-image: radial-gradient(circle at left, #005146, #005146e2);
+    transform: scale(1.05);
+  }
+
+.custom-button i {
+    margin-right: 5px; /* Adiciona um espaço entre o ícone e o texto */
+    color: white;
+  }
+
 .input-icon2 input[type="url"] {
     padding: 13.5px;
     border: 1px solid #ccc;
@@ -246,13 +280,13 @@ select#tipo_desafio {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 40px;
+    gap: 10px;
 
   }
 
   .input-icon {
     flex: 1;
-    margin: 0 0px 0 40px;
+    margin: 0 0px 0 45px;
   }
 
   .form-group.input-icon2 {
@@ -293,9 +327,6 @@ select#tipo_desafio {
         image-rendering: crisp-edges;
     }
 }
-
-
-
 
 h3 {
     color: #3d3d3d;
@@ -392,8 +423,10 @@ p {
     display: flex;
     justify-content: center;
     width: 95%;
-    margin-left: 4;
-    padding-top:1rem;
+}
+
+.checkbox-label {
+    font-size: 16px;
 }
 
 .checkbox-container {
@@ -401,11 +434,12 @@ p {
     align-items: center;
     text-align: left;
     align-content: flex-start;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .custom-checkbox {
     margin-right: 10px;
+    margin-top: 11px;
 }
 
 .sub-label {
