--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -57,35 +57,26 @@
         src="https://i.imgur.com/3x7LETQ.png"
         alt="Logo da Empresa"
       />
-      <h1>Inscrição confirmada</h1>
-      <h2>Olá, {{ nome_produtor }}!</h2>
+      <h1>Confirmação de Inscrição</h1>
+      <h2>Prezado(a) {{ nome_produtor }},</h2>
       <p>
-        É com imenso prazer que confirmamos sua participação no PRÊMIO CNA DE
-        INOVAÇÃO 2024 - Alysson Paolinelli. Este concurso, organizado pela
-        Confederação da Agricultura e Pecuária do Brasil (CNA) em conjunto com o
-        Serviço Nacional de Aprendizagem Rural (Senar) e o Instituto CNA, é uma
-        plataforma excepcional para impulsionar inovações tecnológicas que
-        atendam aos desafios enfrentados pelos produtores rurais no seu dia a
-        dia.
+        Agradecemos sua inscrição para o PRÊMIO CNA DE INOVAÇÃO 2024 - Alysson
+        Paolinelli. Esta iniciativa visa reconhecer e premiar propostas
+        inovadoras dentro do Sistema CNA/Senar/ICNA, contribuindo
+        significativamente para o avanço da agricultura e pecuária no Brasil.
       </p>
       <p>
-        De acordo com as normas do prêmio, ressaltamos que o prazo para a
-        submissão das propostas de inovação se encerra em 23 de abril de 2024. A
-        data final para o recebimento dos projetos pela equipe organizadora é 30
-        de abril de 2024. As fases de avaliação e as datas cruciais estão
-        minuciosamente especificadas no regulamento anexado.
+        Ressaltamos que o prazo para submissão das propostas se encerra em
+        <strong>20 de setembro de 2024</strong>. As propostas selecionadas pelas
+        chefias serão anunciadas em <strong>30 de outubro de 2024</strong>, com
+        a premiação prevista para dezembro de 2024.
       </p>
       <p>
-        Encorajamos você a desenvolver suas propostas com dedicação e atenção
-        aos detalhes, aderindo às diretrizes estipuladas, para que possamos, em
-        conjunto, exaltar as soluções inovadoras que contribuirão
-        significativamente para o avanço da agricultura e pecuária em nosso
-        país. Estamos ansiosos para conhecer suas ideias inovadoras e lhe
-        desejamos êxito neste desafio.
-      </p>
-      <p>
-        Para quaisquer esclarecimentos ou informações adicionais, por favor,
-        sinta-se à vontade para entrar em contato conosco.
+        Encorajamos a elaboração de sua proposta seguindo as diretrizes do
+        regulamento anexado, assegurando que sua inovação possa ser de grande
+        valia para nosso sistema. Para mais informações ou dúvidas, por favor,
+        entre em contato conosco pelo e-mail:
+        premioinovacao@institutocna.org.br.
       </p>
       <p>Atenciosamente,</p>
       <p>Sistema CNA/Senar/ICNA</p>
