--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -220,7 +220,7 @@
           <h2><i class="fas fa-lightbulb"></i> Sobre a Proposta</h2>
         </div>
         <div class="form-group">
-          <div class="form-instructions"> <!-- Contêiner para o texto -->
+          <div class="form-instructions">
             <p>É permitido enviar documentos, vídeos, áudios, fotos, PDFs etc.</p>
           </div>
         </div>
@@ -231,8 +231,8 @@
           >
           <textarea id="explicacao" name="explicacao"></textarea>
         </div>
-        <div class="flex-column"> <!-- Use flex-column para organizar os elementos verticalmente -->
-          <div class="flex-row"> <!-- Contêiner para os inputs, ainda permite disposição em linha se necessário -->
+        <div class="flex-column">
+          <div class="flex-row"> 
             <div class="form-group input-icon">
               <label for="anexar_documentos">Anexar Documentos</label>
               <input
@@ -267,7 +267,7 @@
           <textarea type="text" id="informacoes" name="informacoes"></textarea>
         </div>
         <div class="form-group">
-          <div class="form-instructions-ult"> <!-- Contêiner para o texto -->
+          <div class="form-instructions-ult">
             <p>Mais informações sobre a proposta poderão ser solicitadas ao longo do processo de avaliação.</p>
           </div>
           <div class="checkbox-container">
